--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,24 +2,24 @@ name: project_sanbercode
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=2.18.2 <3.0.0'
 
-dependencies: 
+dependencies:
+  cloud_firestore: 4.0.5
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.1.2
   firebase_core: ^2.2.0
-  get: 4.6.5
-  cloud_firestore: 4.0.5
   firebase_storage: 11.0.5
-  flutter: 
+  flutter:
     sdk: flutter
+  get: 4.6.5
+  google_fonts: ^3.0.1
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
-
